tests/data/bad/bad_init.py
from __future__ import annotations

from ntc import CN

cfg = CN("Bad")
